refactor: routine 등록 및 체크 기능 수정